style and javascript outsourcing

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,44 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      .red-text {
-        color: red;
-      }
-      .green-text {
-        color: green;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='styles/style.css') }}"
+    ></link>
   </head>
 
   <body>
     <h1>The meaning of life is <span id="result" class="red-text"></span>.</h1>
     <h2>Your random number is <span id="random" class="green-text"></span>.</h2>
-    <script>
-        
-      function getTheMeaningOfLife() {
-        // amúgy ezt nem kellene ennyire "elbonyolítani"
-        return new Promise((resolve) => {
-          fetch("/api/v1/theMeaningOfLife")
-            .then((response) => response.text())
-            .then((value) => resolve(value))
-            .catch(() => resolve("currently not available"));
-        });
-      }
-
-      (async () => {
-        document.getElementById("result").innerText =
-          await getTheMeaningOfLife();
-      })();
-
-      // egyszerűbb AJAX-hívás
-      // fetch API-t minden modern böngésző implementálja, de van 3rd party package rá, pl. axios
-      fetch("/api/v1/random")
-        .then((response) => response.text())
-        .then((value) => {
-          document.getElementById("random").innerText = value;
-        })
-        .catch((err) => console.log(err));
-    </script>
+    <img class="w400" src="{{url_for('static', filename="images/avatar.jpg")}}"
+    alt="moving car" alt="moving car">
+    <script src="{{url_for('static', filename='javascript/index.js')}}"></script>
   </body>
 </html>
